apps/services/discussion/provisioning/k8s/discussion.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discussion
  namespace: discussion
spec:
  selector:
    app: discussion
  ports:
    - protocol: TCP
      port: 1338
      targetPort: 1338
  type: ClusterIP
